# phishing-transformer-detection

./: .gitignore  README.md  main.py  mlflow.db  params.yaml  pyproject.toml  run_experiments.sh
.github/workflows/: lint.yaml
data/: data processing.py  data_processing.py
data/gemini/: gemini_part1.txt
data/merged/: merged_raw_data.csv  merged_raw_data.parquet
data/processed/: processed_data_20260126_130805.csv  processed_data_20260126_130805.parquet  processed_data_20260129_204005.parquet  processed_data_20260222_154222.parquet
data/raw/bielik_v3.0/: bielik_v3.0_part1.txt
data/raw/deepseek_r1/: deepseek_r1_part1.txt  deepseek_r1_part2.txt
data/raw/gemini_3/: gemini_3_part1.txt  gemini_3_part2.txt  gemini_3_part3.txt
data/raw/gpt-oss-20b/: gpt-oss-20b_part1.txt
data/raw/gpt_5.1/: gpt_5.1_part1.txt  gpt_5.2_part2.txt
data/raw/grok_4.1/: grok_4.1_part1.txt  grok_4.1_part2.txt
data/split/: test.csv  train.csv  val.csv
notebooks/: comprehesive_model_and_feature_auditor.ipynb  evaluate_baseline.ipynb  evaluate_fine_tuned_bert.ipynb  xai_analysis.ipynb
src/: config.py
src/data/: augment.py  augment_config.py  augment_data.py  augmented_dataset.py  load_data.py  preprocess.py  preprocess_data.py  split_data.py
src/data/adversarial_augment/: adversarial_generator.py  config.py
src/data/augment/: augment_data.py  (+1 more)
src/evaluation/: analysis.py  ensemble.py  evaluate.py  explainer.py  threshold_analysis.py
src/features/: extractor.py  extractor_config.py
src/models/: baseline.py  fine_tune.py  kfold_cv.py  utils.py
src/utils/: logger.py
(+6 files in other folders)
