[project]
name = "phishing-transformer-detection"
version = "0.1.0"
description = "Detection of phishing using transformer models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "torch",
    "transformers",
    "scikit-learn",
    "datasets",
    "mlflow",
    "pyyaml",
    "joblib",
    "numpy",
    "tqdm",
    "lime",
    "shap",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "isort",
    "pytest",
    "types-PyYAML",
    "types-requests"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
# Mypy specific settings
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "tqdm.*",
    "mlflow.*",
    "transformers.*",
    "datasets.*",
    "joblib.*",
    "yaml.*"
]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
